--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heesoo Kim - </title>
-    <link rel="stylesheet" href="./static/css/sytles.css" />
+    <link rel="stylesheet" href="./static/css/styles.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400&display=swap">
 </head>
 <body>
