--- a/index.html
+++ b/index.html
@@ -6,17 +6,6 @@
     <title>{{ resume_data.name }} - My Resume</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400&display=swap">
-    <style>
-        /* 초기에는 숨겨진 상태 */
-        .hidden {
-            display: none;
-        }
-        /* 프로젝트 제목에 커서를 포인터로 변경하여 클릭 가능하게 함 */
-        .project-title {
-            cursor: pointer;
-            color: blue; /* 링크처럼 파란색으로 표시 */
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -28,26 +17,40 @@
     <h3>Education</h3>
     <ul>
         {% for education in resume_data.education %}
-            <li>
-                {{ education.position }}, {{ education.company }}
-                <span class="right-align">{{ education.year }}</span>
-            </li>
+        <li>
+            {{ education.position }}, {{ education.company }}
+            <span class="right-align">{{ education.year }}</span>
+        </li>
+        {% endfor %}
+    </ul>
+
+    <h3>Experience</h3>
+    <ul>
+        {% for job in resume_data.experience %}
+        <li>- {{ job.position }}, {{ job.company }} ({{ job.year }})</li>
+        {% endfor %}
+    </ul>
+
+    <h3>Publication</h3>
+    <ul>
+        {% for publication in resume_data.publication %}
+        <li>{{ publication.position }}, {{ publication.company }} {% if publication.year %}({{ publication.year }}){% endif %}</li>
+        {% endfor %}
+    </ul>
+
+    <h3>Awards</h3>
+    <ul>
+        {% for award in resume_data.award %}
+        <li>{{ award.position }}, {{ award.company }} ({{ award.year }})</li>
         {% endfor %}
     </ul>
 
     <h3>Project</h3>
     <ul>
         {% for project in resume_data.project %}
-            <li>
-                <!-- 클릭 시 toggleProject 함수 호출 -->
-                <span class="project-title" onclick="toggleProject('{{ project.title }}')">
-                    {{ project.title }}, {{ project.company }} ({{ project.year }})
-                </span>
-                <!-- 프로젝트 내용 -->
-                <div id="{{ project.title }}" class="hidden">
-                    {{ project.description }}
-                </div>
-            </li>
+        <li>
+            <a href="{{ url_for('project', project_title=project.title) }}">{{ project.title }}, {{ project.company }} ({{ project.year }})</a>
+        </li>
         {% endfor %}
     </ul>
 
@@ -55,17 +58,9 @@
         <h3>Skills</h3>
         <ul class="skills">
             {% for skill in resume_data.skills %}
-                <li>{{ skill }}</li>
+            <li>{{ skill }}</li>
             {% endfor %}
         </ul>
     </div>
-
-    <script>
-        function toggleProject(projectTitle) {
-            var projectContent = document.getElementById(projectTitle);
-            // classList.toggle은 클래스를 추가하거나 제거합니다.
-            projectContent.classList.toggle('hidden');
-        }
-    </script>
 </body>
 </html>
