--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <ul>
         
         <li>
-            <a href="/project/Mindly%20-%20%EC%BB%B4%ED%93%A8%ED%84%B0%EB%B9%84%EC%A0%84%20AI%20%EB%AA%A8%EB%8D%B8%EC%9D%84%20%ED%99%9C%EC%9A%A9%ED%95%9C%20%EA%B0%90%EC%A0%95%EB%B0%98%EC%9D%91%ED%98%95%20%EB%AA%85%EC%83%81%EA%B3%B5%EA%B0%84%20%EB%A9%94%ED%83%80%EB%B2%84%EC%8A%A4%20">Mindly - 컴퓨터비전 AI 모델을 활용한 감정반응형 명상공간 메타버스 , SNU Intermedia Lab (2022.09 - 2023.2)</a>
+        <a href="{{ url_for('project', project_title=project.title) }}">{{ project.title }}, {{ project.company }} ({{ project.year }})</a>
         </li>
         
         <li>
