--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <h3>Experience</h3>
     <ul>
-        
+        <li>- 전남대학교 Software Evolution & Maintenance with Intelligence Laboratory 학부 인턴(2023.12 ~ 현재)</li>
         <li>- Technical University of Darmstadt, Department of History and Social Sciences (master course) (2023.03 ~ 2023.08)</li>
         
         <li>- 한국HCI학회, 메타버스 UX 기획 과정 본선 발표 부문 대상 (2023.02)</li>
